[project]
name = "moddesc"
version = "1.0.0"
description = "Mod description tool"
requires-python = ">=3.14.0"
dependencies = [
    "click",
    "rich",
]

[project.scripts]
moddesc = "moddesc_convert:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
