[project]
name = "me3mm"
version = "1.0.0"
description = "ME3 Tweaks Mod Manager PyTool"
requires-python = ">=3.14.0"
dependencies = [
    "click",
    "rich",
]

[project.scripts]
me3mm = "me3mmcli:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
